unpackaged/post/08_redu_object_tracking/objects/rio_ed__Study_Registration__c.object
<CustomObject>
    <fields>
        <fullName>rio_ed__Enrollment_Date__c</fullName>
        <description>Date of when the registration is confirmed.</description>
        <inlineHelpText>Date of when the registration is confirmed.</inlineHelpText>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rio_ed__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Waitlist_Date__c</fullName>
        <description>Date of the registration is waitlisted.</description>
        <inlineHelpText>Date of the registration is waitlisted.</inlineHelpText>
        <label>Waitlist Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rio_ed__Withdrawn_Date__c</fullName>
        <description>Date of when the registration is withdrawn.</description>
        <inlineHelpText>Date of when the registration is withdrawn.</inlineHelpText>
        <label>Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <label>Study Registration</label>
    <nameField>
        <displayFormat>RE-{00000}</displayFormat>
        <label>Study Registration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>